[RORDEV-665] Update TTL of  the test settings engine (#814)
